<resources>
    <string name="app_name">Wheelsy</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="invalid_creds_title">Invalid credentials</string>
    <string name="ìnvalid_creds_text">Your e-mail or password is invalid. Please, check your credentials and try again.</string>
    <string name="close">Close</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="create_an_account">CREATE AN ACCOUNT</string>
    <string name="back">Back</string>
    <string name="home">Home</string>
    <string name="trips">Trips</string>
    <string name="profile">Profile</string>
    <string name="help">Help</string>
    <string name="logout">Logout</string>
    <string name="no_trips_found">No trips found</string>
    <string name="google_maps_key">AIzaSyA-VVZdXnshBptC2XH-1hRFFjikApMQt-E</string>
    <string name="share_trip_message">Wheelsy: The trip \"%s\" has been made with a distance of %s km.</string>
    <string name="delete_trip_title">Delete trip?</string>
    <string name="delete_trip_message">Are you sure you want to delete this trip?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="share_trip_title">Share a trip</string>
    <string name="service_state">ServiceState</string>
    <string name="state_running">Running</string>
    <string name="state_paused">Paused</string>
    <string name="state_stopped">Stopped</string>
    <string name="state_reset">Restarting</string>
    <string name="service_distance">ServiceDistance</string>
    <string name="state_distance">ServiceDistance</string>
    <string name="service_notifi_channel">Wheelsy service notification channel</string>
    <string name="service_notifi_title">Wheelsy</string>
    <string name="service_notifi_text">Service is running.</string>
    <string name="service_notifi_text_paused">Service is paused.</string>
    <string name="service_latitude">ServiceLatitude</string>
    <string name="service_longitude">ServiceLongitude</string>
    <string name="save_trip_title">Save trip?</string>
    <string name="save_trip_message">Do you want to save this trip?</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="new_trip">New trip</string>
    <string name="trip_name">Trip name</string>
    <string name="trip_description">Trip description</string>
    <string name="error_message_required">Required field</string>
    <string name="created_successfully">Created successfully!</string>
    <string name="somthing_went_wrong">Something went wrong!</string>
    <string name="trip_created_success_message">Trip has been created successfully.</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_from_gallery">Choose from Gallery</string>
    <string name="add_photo">Add Photo!</string>
    <string name="help_text">This application has been made as an assignment for the course Mobile Infrastructure and Security in the Amsterdam University of Applied Sciences (AUAS).</string>
    <string name="help_developed_by">Developed by \n Qutayba Ali \n 500710634 \n qutayba.ali@hva.nl</string>
</resources>
