<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.LoginActivity">
    <data>
        <import type="android.view.View"/>
        <variable name="handler" type="site.qutayba.wheelsy.activities.LoginActivity"/>
        <variable name="login" type="site.qutayba.wheelsy.models.Login"/>
        <variable name="isLoading" type="java.lang.Boolean" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="30dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="32dp"
            android:onClick="@{handler::loginClick}"
            android:text="@string/login"
            android:visibility="@{isLoading ? View.GONE : View.VISIBLE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/signUpButton"
            app:layout_constraintTop_toBottomOf="@+id/passwordTextInputLayout" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signUpButton"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:onClick="@{handler::signUpClick}"
            android:text="@string/sign_up"
            android:visibility="@{isLoading ? View.GONE : View.VISIBLE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/loginButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordTextInputLayout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailTextInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="75dp"
            android:hint="@string/e_mail"
            app:endIconMode="clear_text"
            app:layout_constraintBottom_toTopOf="@+id/passwordTextInputLayout"
            app:layout_constraintTop_toBottomOf="@id/logoImageView"
            tools:layout_editor_absoluteX="30dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:focusable="@{!isLoading}"
                android:cursorVisible="@{!isLoading}"
                android:text="@={login.email}"
                app:validateEmpty="@{true}"
                app:validateType='@{"email"}' />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordTextInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:hint="@string/password"
            app:endIconMode="password_toggle"
            app:layout_constraintStart_toStartOf="@+id/emailTextInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/emailTextInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:text="@={login.password}"
                app:validateEmpty="@{true}" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/logoImageView"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginTop="32dp"
            android:src="@drawable/wheelsylogo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/colorPrimary"
            android:visibility="@{isLoading ? View.VISIBLE : View.GONE}"
            android:layout_marginTop="100dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordTextInputLayout" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
